--- a/itta-bab-frontend/package.json
+++ b/itta-bab-frontend/package.json
@@ -14,7 +14,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
-    "v-calendar": "^3.1.2",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/vue3": "^6.1.15",
     "vue": "^3.5.12",
     "vue-router": "^4.0.13"
   },
