--- a/itta-bab-frontend/package.json
+++ b/itta-bab-frontend/package.json
@@ -18,6 +18,7 @@
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/vue3": "^6.1.15",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-vue-3": "^0.5.1",
     "vue": "^3.5.12",
